# frappe-testing-loop

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/skills/frappe-testing-loop/: SKILL.md
.claude-plugin/: marketplace.json
.claude/skills/frappe-testing-loop/: SKILL.md
.codex-plugin/: plugin.json
agents/: frappe-testing-loop-runner.md
docs/: agent-integrations.md  architecture.md
docs/plans/: 2026-07-10-agent-plugin-conversion.md  2026-07-10-autoresearch-loop-hardening.md
examples/: benchpress-audit.html  config.example.yml  crontab.example
frappe_testing_loop/: alerts.py  audit.py  cli.py  models.py  reports.py  runners.py  scanners.py  scoring.py  utils.py
plugins/frappe-testing-loop/.claude-plugin/: plugin.json
plugins/frappe-testing-loop/skills/frappe-testing-loop/: SKILL.md
scripts/: run_daily_audit.sh
skills/frappe-testing-loop/: SKILL.md
skills/frappe-testing-loop/references/: report-interpretation.md
tests/: test_official_standards_scanner.py  test_score_history.py
